DZ: full initial dzil config

--- a/dist.ini
+++ b/dist.ini
@@ -4,18 +4,35 @@ license = Perl_5
 copyright_holder = Olivier Mengué
 copyright_year   = 2015
 
-[@Basic]
+[GatherDir]
+[PruneCruft]
 
-[PkgVersion]
-[PodVersion]
+[RewriteVersion]
+[License]
 
-[MetaJSON]
-;[GithubMeta]
-;remote = github
+[Test::ReportPrereqs]
+[Test::Compile]
+[Test::Kwalitee]
 
 [AutoPrereqs]
 [MinimumPerlFast]
 
-[ReportVersions::Tiny]
-[Test::Compile]
-;[Test::Kwalitee]
+[GithubMeta]
+[MetaYAML]
+[MetaJSON]
+
+[Manifest]
+;[ManifestSkip]
+
+[MakeMaker]
+
+[TestRelease]
+[ConfirmRelease]
+
+[Git::Check]
+
+[UploadToCPAN]
+[BumpVersionAfterRelease]
+
+[Git::Commit]
+[Git::Push]
