DZ: fix Git::Commit to commit lib/ for BumpAfterRelease

--- a/dist.ini
+++ b/dist.ini
@@ -30,10 +30,14 @@ copyright_year   = 2015
 [TestRelease]
 [ConfirmRelease]
 
+; Disallow dirty files in lib/
 [Git::Check]
 
 [UploadToCPAN]
 [BumpVersionAfterRelease]
 
-[Git::Commit]
+[Git::Commit / CommitAfterRelease]
+; Commit lib/ (for $VERSION), Changes
+allow_dirty = lib
+
 [Git::Push]
