Fix Changes and dist.ini
Because I had forgot [NextRelease] in dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -34,8 +34,9 @@ copyright_year   = 2015
 [Git::Check]
 
 [UploadToCPAN]
-[BumpVersionAfterRelease]
 
+[BumpVersionAfterRelease]
+[NextRelease]
 [Git::Commit / CommitAfterRelease]
 ; Commit lib/ (for $VERSION), Changes
 allow_dirty = lib
