DZ: add Git::Tag; commit Changes separately from the $VERSION bump

--- a/dist.ini
+++ b/dist.ini
@@ -35,9 +35,14 @@ copyright_year   = 2015
 
 [UploadToCPAN]
 
-[BumpVersionAfterRelease]
 [NextRelease]
-[Git::Commit / CommitAfterRelease]
+[Git::Commit / CommitChanges]
+tag_message = CPAN release %v
+[Git::Tag]
+
+[BumpVersionAfterRelease]
+
+[Git::Commit / CommitVERSION]
 ; Commit lib/ (for $VERSION), Changes
 allow_dirty = lib
 
