Lower runtime deps; increase rutime recommends
Encode 2.73 is now only recommended (this is needed on Win32 for UTF-8
output), 2.05 required (this is where encoding::_get_locale_encoding
appeared).
JSON::MaybeXS recommended because it includes the latest fixes.

--- a/dist.ini
+++ b/dist.ini
@@ -15,6 +15,12 @@ copyright_year   = 2015
 [Test::Compile]
 [Test::Kwalitee]
 
+[Prereqs / RuntimeRecommends]
+; Latest fixes
+JSON::MaybeXS = 1.003003
+; Includes my patch for locale encoding
+Encode = 2.73
+
 [AutoPrereqs]
 [MinimumPerlFast]
 
