Require Encode 2.73 on MSWin32 and netbsd

--- a/dist.ini
+++ b/dist.ini
@@ -21,6 +21,11 @@ JSON::MaybeXS = 1.003003
 ; Includes my patch for locale encoding
 Encode = 2.73
 
+[OSPrereqs / MSWin32]
+Encode = 2.73
+[OSPrereqs / netbsd]
+Encode = 2.73
+
 [AutoPrereqs]
 [MinimumPerlFast]
 
